# libvcs

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  llvm-toolchain.cmake
cmake/: generate_fbs.cmake
contrib/: CMakeLists.txt
contrib/cxxopts/: .version
contrib/flatbuffers/: .version  CMakeLists.txt
contrib/flatbuffers/src/: flatc_main.cpp  idl_gen_cpp.cpp
contrib/lz4/: .version  CMakeLists.txt
contrib/sha/: CMakeLists.txt
contrib/xxhash/: .version  CMakeLists.txt
include/libvcs/: hashid.h
include/libvcs/fbs/: blob.fbs  commit.fbs  renames.fbs  tag.fbs  tree.fbs  types.fbs
include/libvcs/object/: data.h  hashid.h
include/libvcs/util/: hex.h
src/: data.cc  hashid.cc
ut/: CMakeLists.txt  ut_hashid.cc  ut_hex.cc
